tests/NormalTests/paczka1/fuzzy1/71148662.err
Error in line 3: 6HkJa A}1 150,0
Error in line 10: 3o2iyeVfb A21 86,0
Error in line 29: 6HkJa A549 56,8
